Completed the showcase

--- a/index.html
+++ b/index.html
@@ -28,5 +28,22 @@
         </nav>
       </div>
     </div>
+
+    <!-- Showcase -->
+    <div class="showcase">
+      <div class="container grid">
+        <div class="showcase-text">
+          <h1>Node for web 3.0</h1>
+          <p>
+            A NodeJS framework for building efficient web 3 server-side
+            applications. Also supports ExpressJS and NestJS features and more!
+          </p>
+          <div class="flex">
+            <a href="docs.html" class="btn">Documentation</a>
+            <a href="#" class="btn">Source code</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
