Completed the preview

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./css/utils.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Me JS| Node Framework for web 3.0</title>
   </head>
@@ -31,7 +32,7 @@
 
     <!-- Showcase -->
     <div class="showcase">
-      <div class="container grid">
+      <div class="container">
         <div class="showcase-text">
           <h1>Node for web 3.0</h1>
           <p>
@@ -45,5 +46,49 @@
         </div>
       </div>
     </div>
+
+    <!-- Features -->
+    <section class="features">
+      <div class="container">
+        <h2 class="features-heading text-center my-1">Features</h2>
+        <div class="grid-3 text-center my-4">
+          <div class="caps">
+            <i class="fa fa-arrows fa-3x"></i>
+            <h3>Extensible</h3>
+            <p class="text-secondary">
+              Gives you true flexibility by allowing use of any other libraries
+              thanks to its modular and dynamic architecture.
+            </p>
+          </div>
+          <div class="caps">
+            <i class="fa-solid fa-server fa-3x"></i>
+            <h3>Decentralized</h3>
+            <p class="text-secondary">
+              A decentralized adaptable ecosystem that is a fully-fledged
+              backbone for all web 3 server-side applications.
+            </p>
+          </div>
+          <div class="caps">
+            <i class="fa-solid fa-gem fa-3x"></i>
+            <h3>Generational</h3>
+            <p class="text-secondary">
+              Takes advantage of latest JavaScript features, bringing design
+              patterns and mature solutions to Node.js world.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Preview -->
+    <section class="preview">
+      <div class="container">
+        <h3 class="features-heading text-center my-1">Preview</h3>
+        <div class="flex flex-img">
+          <img src="./img/cli.jpeg" alt="" />
+          <img src="./img/preview.jpeg" alt="" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
