Completed the home and features page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <div class="navbar">
+    <div class="navbar first">
       <div class="container flex">
         <h1 class="logo">Me JS</h1>
         <nav>
@@ -90,5 +90,77 @@
         </div>
       </div>
     </section>
+
+    <!-- Decentralized -->
+    <section class="decentralized bg-primary my-2 py-2">
+      <div class="container grid-3 grid-2">
+        <div class="text-center">
+          <h2 class="lg">Decentralized Web Building</h2>
+          <p class="lead my-1">
+            Build decentralized web 3 apps at the go. Fast, secure and scalable
+          </p>
+          <a href="#" class="btn btn-dark">Read More</a>
+        </div>
+        <img src="./img/decentralized.png" alt="" />
+      </div>
+    </section>
+
+    <!-- Sponsors -->
+    <section class="sponsors">
+      <h2 class="md text-center my-2">Meet our sponsors</h2>
+      <div class="container">
+        <div class="flex">
+          <div class="card">
+            <img src="./img/logos/adidas.png" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/cola.png" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/google.png" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/pepsi.png" alt="" />
+          </div>
+        </div>
+        <div class="flex">
+          <div class="card">
+            <img src="./img/logos/sponsor.jpg" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/total.jpg" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/twitter.png" alt="" />
+          </div>
+          <div class="card">
+            <img src="./img/logos/verizon.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer bg-dark py-5">
+      <div class="container grid-3">
+        <div>
+          <h1>Me JS</h1>
+          <p>Copyright &copy; 2022</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="features.html">Features</a></li>
+            <li><a href="docs.html">Documentation</a></li>
+          </ul>
+        </nav>
+        <div class="social">
+          <a href="#"><i class="fab fa-github fa-2x"></i></a>
+          <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+          <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+          <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
