Completed the docs page and added animations

--- a/features.html
+++ b/features.html
@@ -36,13 +36,10 @@
         <div class="features-text">
           <h1>Features</h1>
           <p>
-            MeJS is a project from the faculty of technological sciences in
-            UniPort. It has been approved and adopted by over 10,000 companies
-            leading in the tech industry. So what are you waiting for?
-          </p>
-          <p>Install MeJS now!</p>
+            Me JS is a multi-package backend building block for web 3 apps. Blockchain apps and smart contracts can be written using MeJS packages.</p>
+          <p>It also supports ExpressJS and NestJS out of the box!</p>
           <div class="flex">
-            <a href="docs.html" class="btn">Download MeJS v1.0</a>
+            <a href="docs.html" class="btn">Read More...</a>
           </div>
         </div>
       </div>
@@ -84,7 +81,7 @@
             </div>
             <div class="card flex">
                 <i class="fas fa-signal fa-3x"></i>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quod nobis ad! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci, alias natus tempora commodi, similique nam debitis quod non, soluta dolor voluptates provident iure quos magnam libero id voluptatibus incidunt impedit?</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat quod nobis ad! Lorem ipsum dolor sit amet, consectetur adipisicing elits </p>
             </div>
         </div>
     </section>
