--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </p>
           <div class="flex">
             <a href="docs.html" class="btn">Documentation</a>
-            <a href="#" class="btn">Source code</a>
+            <a href="https://github.com/Xelem/Me_JS" class="btn">Source code</a>
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
           <p class="lead my-1">
             Build decentralized web 3 apps at the go. Fast, secure and scalable
           </p>
-          <a href="#" class="btn btn-dark">Read More</a>
+          <a href="features.html" class="btn btn-dark">Read More</a>
         </div>
         <img src="./img/decentralized.png" alt="" />
       </div>
